<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="default_">values-default</string>
    <string name="default_sw360">values-default</string>
    <string name="default_sw360_sw600">values-default</string>
    <string name="default_sw360_sw600_sw720">values-default</string>
    <string name="default_sw360_sw600_sw720_sw768">values-default</string>
    <string name="default_sw360_sw600_sw720_sw768_sw1024">values-default</string>
    <string name="should_build_values_file">values-sw%sdp</string>
    <string name="app_name">精品应用</string>
    <string name="action_settings">Settings</string>
    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="type">类型</string>
    <string name="add">添加</string>
    <string name="hours">小时</string>
    <string name="exit_app">退出应用</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="clear">清除</string>
    <string name="actionbar_back">ActionBar返回键</string>
    <string name="actionbar_divide_line">ActionBar分割线</string>
    <string name="note_loading">正在加载</string>
    <string name="aty_boutique">精品应用</string>
    <string name="cascade_layout">CascadeLayout</string>
    <string name="aty_add_view">动态添加或删除View</string>
    <string name="please_select">请选择</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="type_one">转调休</string>
    <string name="type_two">转加班费</string>
    <string name="total_calcuate">共计</string>
    <string name="out_time_length">计算时长(小时)</string>
    <string name="table_item_index">表单信息(%s)</string>
    <string name="dynamic_add_view_error_time">开始时间要小于结束时间</string>
    <string name="submit_infos_success">提交成功</string>
    <string name="please_fillin_infos">请正确填写必要的信息</string>
    <string name="submit_infos_note">正在提交信息，请稍候</string>
    <string name="l_menu_leave">请假休息</string>
    <string name="l_menu_zxing">二维码</string>
    <string name="menu_paint_demo">Paint画图</string>
    <string name="menu_chinese_map">中国地图</string>
    <string name="menu_pdf_browser">PDF阅读器</string>
    <string name="tree_listview_aty">树形ListView</string>
    <string name="shape_one_text">人</string>
    <string name="shape_three_text">人人人</string>
    <string name="switcher_previous">Pervious</string>
    <string name="switcher_next">Next</string>
    <string name="punshCarding">正在打卡</string>
    <string name="punshCardSuccess">打卡成功</string>
    <string name="punshCardFail">打卡失败</string>
    <string name="refresh_map_view">刷新地图</string>
    <string name="paint_text">画字</string>
    <string name="paint_text_path">沿着路径画字</string>
    <string name="histogram_view_aty">柱状图表</string>
    <string name="hv_top_main_title">全网监控系统</string>
    <string name="hv_top_sub_title">[一级指标]</string>
    <string name="hv_left_title">全网百分比</string>
    <string name="hv_average_value">AVG:</string>
    <string name="histogram_view_refrech">刷新图表</string>
    <string name="hv_top_main_title_month">月份营业额</string>
    <string name="hv_top_sub_title_month">[主要指标]</string>
    <string name="hv_left_title_month">单位:亿元</string>
    <string name="force_offline">强制下线功能</string>
    <string name="force_offline_warn">警告</string>
    <string name="force_offline_warn_content">您已被强制下线，请重新登录！</string>
    <string name="user_login">登录</string>
    <string name="user_name">用户名</string>
    <string name="user_password">密%s码</string>
    <string name="user_name_hint">请输入用户名</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="inflate_only_invoke">inflate()只能执行一次</string>
    <string name="press_one_more">再按一次</string>
    <string name="text_show_vs_counter">%s 秒后显示ViewStub</string>
    <string name="sign_panel">签字板</string>
    <string name="sdcard_error">SD卡不存在或已经卸载</string>
    <string name="btn_move">移动我</string>
    <string name="download">下载</string>
    <string name="upload">上传</string>
    <string name="start_upload">开始上传</string>
    <string name="upload_file_unexist">文件不存在</string>
    <string name="upload_file_finished">文件上传完成</string>
    <string name="upload_file_fail">文件上传失败</string>
    <string name="need_time">大约需要: </string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="record_video">录制视频</string>
    <string name="record">录制</string>
    <string name="stop">停止</string>
    <string name="play">播放</string>
    <string name="replay">再播一次</string>
    <string name="downloading">正在下载: </string>
    <string name="download_note">下载提示</string>
    <string name="download_finish">下载完成</string>
    <string name="downloaded_install">点击安装</string>
    <string name="download_fail">下载失败</string>
    <string name="extract_screen_c">获取屏幕任意点的颜色</string>
    <string name="show_color_and_rgb">滑动屏幕即可改变该栏目的背景色</string>
    <string name="change_bg_btn">更换背景</string>
    <string name="btn_scan_code">扫码换背景</string>
    <string name="btn_scan_take_photo">拍照</string>
    <string name="aty_scan">扫一扫</string>
    <string name="change_bg_image_btn">更换图片 %1$s/%2$s</string>
    <string name="gray_calculate_rule">Gray=R*0.3+G*0.59+B*0.11=</string>
    <string name="scanning_color">颜色扫描</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="close">关闭</string>
    <string name="locating">正在定位，请稍候&#8230;</string>
    <string name="located_fail">定位失败，点击重新定位</string>
    <string name="map_function">地图应用</string>
    <string name="map_refresh_location">刷新位置</string>
    <string name="map_type_normal">普通图</string>
    <string name="map_type_statellite">卫星图</string>
    <string name="map_traffic">交通图</string>
    <string name="map_heat">热力图</string>
    <string name="handle_client_request">根据用户指令处理客户请求</string>
    <string name="command_invalid">指令无效</string>
    <string name="branch_develop">开发分支</string>
    <string name="ft_btn">FragmentTwo</string>
    <string name="setting_volume">请调节音量</string>
    <string name="user_login_title">系统登录</string>
    <string name="user_login_o">登  录</string>
    <string name="user_login_c">关  闭</string>
    <string name="login_setting">关  闭(%s)</string>
    <string name="login_defaule_name">Nantian</string>
    <string name="login_defaule_pwd">UniStrong</string>
    <string name="dialog_def_title">信息确认</string>
    <string name="dialog_def_content">对话框显示内容</string>
    <string name="rsa_aty">RSA加密与解密</string>
    <string name="rsa_edit_hint">请输入需要加密的数据</string>
    <string name="rsa_text_encode_hint">加密后的数据</string>
    <string name="rsa_text_decode_hint">解密还原数据</string>
    <string name="rsa_text_encode">加密</string>
    <string name="rsa_text_decode">解密</string>
    <string name="jui_aty">通过JNI技术与C/C++代码通信</string>
    <string name="jui_call_cpp">调用C/C++代码函数</string>
    <string name="jui_call_java_static">C/C++中调用Java的静态函数</string>
    <string name="jui_call_java_instance">C/C++中调用Java的函数</string>
    <string name="nineoldapi">NineOldApis</string>
    <string name="input_warn">输入不合法</string>
    <string name="input_tolen">达到指定长度</string>

</resources>