<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RSAActivity" >

    <EditText
        android:id="@+id/edit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:background="@drawable/radius_bg"
        android:hint="@string/rsa_edit_hint"
        android:minHeight="40dip"
        android:padding="6dip"
        android:textColor="@color/black"
        android:textColorHint="@color/view_divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_encode"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dip"
            android:background="@drawable/radius_bg_clickable"
            android:clickable="true"
            android:gravity="center"
            android:onClick="setOnClick"
            android:padding="@dimen/global_button_padding"
            android:text="@string/rsa_text_encode"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_decode"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dip"
            android:background="@drawable/radius_bg_clickable"
            android:clickable="true"
            android:gravity="center"
            android:onClick="setOnClick"
            android:padding="@dimen/global_button_padding"
            android:text="@string/rsa_text_decode"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/edit_show_encoded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:background="@drawable/radius_bg"
        android:gravity="center_vertical"
        android:hint="@string/rsa_text_encode_hint"
        android:minHeight="40dip"
        android:padding="6dip"
        android:textColor="@color/stroke_color"
        android:textColorHint="@color/stroke_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_show_decoded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:background="@drawable/radius_bg"
        android:gravity="center_vertical"
        android:hint="@string/rsa_text_decode_hint"
        android:minHeight="40dip"
        android:padding="6dip"
        android:textColor="@color/black"
        android:textColorHint="@color/view_divide_line"
        android:textSize="18sp" />

</LinearLayout>