<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TreeListViewActivity" >

    <ListView
        android:id="@+id/tree_listview"
        android:layout_width="match_parent"
        android:layout_height="180dip"
        android:divider="@color/completely_transparent"
        android:fadingEdge="none"
        android:listSelector="@color/completely_transparent"
        android:padding="4dip"
        android:scrollbars="none"
        android:scrollingCache="false" />

    <Button
        android:id="@+id/tl_btn_download"
        style="@style/WrapContentButtonStyle"
        android:layout_below="@id/tree_listview"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dip"
        android:text="@string/download" />

    <TextView
        android:id="@+id/upload_text_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uploadbar"
        android:layout_alignRight="@+id/uploadbar"
        android:layout_marginBottom="-4dip" />

    <ProgressBar
        android:id="@+id/uploadbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="14dp"
        android:layout_below="@id/tl_btn_download"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip" />

    <Button
        android:id="@+id/tl_btn_upload"
        style="@style/WrapContentButtonStyle"
        android:layout_below="@id/uploadbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dip"
        android:text="@string/upload" />

    <Button
        android:id="@+id/tl_btn_record_video"
        style="@style/WrapContentButtonStyle"
        android:layout_below="@id/tl_btn_upload"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dip"
        android:text="@string/record_video" />

    <Button
        android:id="@+id/tl_btn_temp"
        style="@style/WrapContentButtonStyle"
        android:layout_below="@id/tl_btn_record_video"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dip"
        android:text="@string/extract_screen_c" />

    <Button
        android:id="@+id/tl_btn_exit_app"
        style="@style/WrapContentButtonStyle"
        android:layout_below="@id/tl_btn_temp"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dip"
        android:text="@string/exit_app" />

    <TextView
        android:id="@+id/tl_text_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_btn_exit_app"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/transparent_menu_text_size" />

    <!--
    1.ViewStub目前不支持merge标签；2.inflatedId为ViewStub调用inflate()后才返回的id，
    如果想用通过findViewById找到该id对应的实例，会报空指针异常，但该值可以不用设置。    -->

    <ViewStub
        android:id="@+id/tl_vs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_text_vs"
        android:inflatedId="@+id/tl_vs_inflate_id"
        android:layout="@layout/offline_aty" />

</RelativeLayout>